<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    android:padding="@dimen/default_screen_padding">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_calibration_guideline_horizontal_80"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_calibration_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fragment_calibration_description"
        android:layout_marginBottom="@dimen/default_component_margin"
        android:textAppearance="?attr/textAppearanceHeadlineLarge"
        android:text="@string/fragment_calibration_header_text_idle"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_calibration_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/fragment_calibration_phone_image"
        android:layout_marginBottom="@dimen/default_component_margin"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        android:textAlignment="center"
        android:text="@string/fragment_calibration_description_text_idle"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/fragment_calibration_phone_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/fragment_calibration_guideline_horizontal_80"
        app:srcCompat="@drawable/ic_phone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_calibration_button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_calibration_guideline_horizontal_80"
        android:layout_marginTop="@dimen/default_component_margin"
        android:text="@string/fragment_calibration_button_start_caption_idle"/>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/fragment_calibration_progress_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/fragment_calibration_phone_image"
        app:layout_constraintBottom_toBottomOf="@id/fragment_calibration_phone_image"
        app:layout_constraintStart_toStartOf="@id/fragment_calibration_phone_image"
        app:layout_constraintEnd_toEndOf="@id/fragment_calibration_phone_image"
        android:indeterminate="true"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>